# SimpleReflect

./: CMakeLists.txt  Readme.md
cmake/: config.cmake.in
examples/: CMakeLists.txt  class_example.cpp  enum_example.cpp
include/SimpleReflect/: Defines.hpp  Enums.hpp  Reflect.hpp  TypeTraits.hpp
